Change yarn start

--- a/app/gem-farm/package.json
+++ b/app/gem-farm/package.json
@@ -5,7 +5,7 @@
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
-    "start": "vue-cli-service serve --mode production",
+    "start": "npx serve -s -n dist -l 3003",
     "test:unit": "vue-cli-service test:unit",
     "test:e2e": "vue-cli-service test:e2e",
     "lint": "vue-cli-service lint",
